Fix z-index issue

--- a/src/components/commons/NewsDrawer/NewsDrawer.module.scss
+++ b/src/components/commons/NewsDrawer/NewsDrawer.module.scss
@@ -1,5 +1,14 @@
+.root {
+  z-index: 10000;
+}
+
 .drawerButton {
   position: fixed;
   right: 20px;
   bottom: 20px;
+  z-index: 10000;
+}
+
+.drawer {
+  z-index: 10000;
 }
