--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,10 @@ body,
   height: 100%;
 }
 
+.leaflet-container {
+  z-index: 10;
+}
+
 .leaflet-control-zoom {
   position: absolute;
   bottom: 30px;
